# WebServer

./: .gitignore~  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  basic.h  benchmark.txt~  client.c  cmake_install.cmake  constants.h  http_response.c  http_response.h  image_converter.c  image_converter.h  parser.c  parser.h  parser_callbacks.c  parser_callbacks.h  prova.c  server  server.c  server.c~  server.h  sig_handler.c  sig_handler.h  thread_job.c  thread_job.h
cache/: image.cBwP0A
lib/: io.c  io.h  ipc_sem.c  ipc_sem.h  lock_fcntl.c  lock_fcntl.h  logging.c  logging.h  lru-cache.c  lru-cache.h  mutex_sv.c  mutex_sv.h
